force-app/main/default/objects/Invoice__c/fields/ADP_File_Number__c.field-meta.xml
<CustomField>
    <fullName>ADP_File_Number__c</fullName>
    <formula>Lead__r.Assigned_To__r.Contact.OnBoarding__r.Paychex_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP File Number</label>
    <type>Text</type>
</CustomField>