force-app/main/default/objects/Invoice__c/fields/Case_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Delivery_Type__c</fullName>
    <formula>TEXT(Case__r.Service_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Delivery Type</label>
    <type>Text</type>
</CustomField>