force-app/main/default/objects/Invoice__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>Case__r.Contact__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>