force-app/main/default/objects/Invoice__c/fields/Costpoint_Code__c.field-meta.xml
<CustomField>
    <fullName>Costpoint_Code__c</fullName>
    <formula>Case__r.costpoint_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costpoint Code</label>
    <type>Text</type>
</CustomField>