force-app/main/default/objects/Invoice__c/fields/Interview_Method__c.field-meta.xml
<CustomField>
    <fullName>Interview_Method__c</fullName>
    <label>Interview Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>P-UC</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>R-UC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>