force-app/main/default/objects/Invoice__c/fields/Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Name__c</fullName>
    <formula>Lead__r.Assigned_To__r.LastName +&apos; &apos;+ Lead__r.Assigned_To__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigator Name</label>
    <type>Text</type>
</CustomField>