force-app/main/default/objects/Invoice__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <formula>Lead__r.Item_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>