force-app/main/default/objects/Invoice__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <formula>IF(
    CONTAINS(TEXT(Lead__r.LeadType__c), &quot;(&quot;),
    MID(
        TEXT(Lead__r.LeadType__c),
        FIND(&quot;(&quot;, TEXT(Lead__r.LeadType__c)) + 1,
        FIND(&quot;)&quot;, TEXT(Lead__r.LeadType__c)) - FIND(&quot;(&quot;, TEXT(Lead__r.LeadType__c)) - 1
    ),
    TEXT(Lead__r.LeadType__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>